force-app/main/default/objects/redwing__Question_Bank_Question__c/redwing__Question_Bank_Question__c.object-meta.xml
<CustomObject>
    <label>Question Bank Question</label>
    <nameField>
        <displayFormat>QBQ-{0000000}</displayFormat>
        <label>Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Bank Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>