force-app/main/default/objects/redwing__Question_Bank_Question__c/fields/redwing__Blank_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Blank_Type__c</fullName>
    <inlineHelpText>If &quot;input&quot; is selected, users will need to type an answer in the text box. If &quot;picklist&quot; is selected, users will need to select an answer from the dropdown.</inlineHelpText>
    <label>Blank Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input</fullName>
                <default>true</default>
                <label>Input</label>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>