force-app/main/default/objects/redwing__Question_Bank_Question__c/fields/redwing__Description_RTA__c.field-meta.xml
<CustomField>
    <fullName>redwing__Description_RTA__c</fullName>
    <label>Additional Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>