force-app/main/default/objects/redwing__Question_Bank_Question__c/fields/redwing__Max_Answers__c.field-meta.xml
<CustomField>
    <fullName>redwing__Max_Answers__c</fullName>
    <label>Max Answers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>