force-app/main/default/objects/redwing__Question_Bank_Question__c/fields/redwing__Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Bank__c</fullName>
    <label>Question Bank</label>
    <referenceTo>redwing__Question_Bank__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Question_Bank_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>