force-app/main/default/objects/redwing__Question_Bank_Question__c/fields/redwing__Question_Feedback__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Feedback__c</fullName>
    <inlineHelpText>Question-level feedback that will be shown for users on the Response Summary page based on the selected Question Feedback Visibility option.</inlineHelpText>
    <label>Question Feedback</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>