force-app/main/default/objects/redwing__Question_Bank_Question__c/fields/redwing__Question_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Image_URL__c</fullName>
    <label>Question Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>