force-app/main/default/objects/redwing__Question_Bank_Question__c/fields/redwing__Text_With_Blanks__c.field-meta.xml
<CustomField>
    <fullName>redwing__Text_With_Blanks__c</fullName>
    <inlineHelpText>Add text and blanks into this field using the &quot;Add Blank&quot; button.</inlineHelpText>
    <label>Text With Blanks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>