force-app/main/default/objects/redwing__Question_Bank_Question__c/validationRules/redwing__CorrectBoolean_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__CorrectBoolean_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(redwing__Correct_Boolean__c)) &amp;&amp;  TEXT(redwing__Type__c) == &quot;True/False&quot;</errorConditionFormula>
    <errorMessage>You must specify a correct true/false value for this type of question</errorMessage>
</ValidationRule>